exports[`mapToData with json content-type should return fallback -ko- 1`] = `
Array [
  Object {
    "done": true,
    "value": Object {
      "fallback": true,
    },
  },
]
`;

exports[`mapToData with json content-type should return result -ko- 1`] = `
Array [
  Object {
    "done": false,
    "value": Object {
      "data": "JSON",
    },
  },
  Object {
    "done": true,
    "value": Object {
      "data": "JSON",
    },
  },
]
`;

exports[`mapToData with json content-type should return result -ok- 1`] = `
Array [
  Object {
    "done": false,
    "value": Object {
      "data": "JSON",
    },
  },
  Object {
    "done": true,
    "value": Object {
      "data": "JSON",
    },
  },
]
`;

exports[`mapToData with json content-type should return text with json parse on error 1`] = `
Array [
  Object {
    "done": false,
    "value": Object {
      "data": "TEXT",
    },
  },
  Object {
    "done": true,
    "value": Object {
      "data": "TEXT",
    },
  },
]
`;

exports[`mapToData with json content-type should return undefined -code 204 no content- 1`] = `
Array [
  Object {
    "done": true,
    "value": undefined,
  },
]
`;

exports[`mapToData with json content-type should throw error when json parse and text parse on error 1`] = `"PARSING ERROR"`;

exports[`mapToData with no content-type should return text when content-type is undefined 1`] = `
Array [
  Object {
    "done": false,
    "value": Object {
      "data": "TEXT",
    },
  },
  Object {
    "done": true,
    "value": Object {
      "data": "TEXT",
    },
  },
]
`;

exports[`mapToData with plain/text content-type should return fallback -ko- 1`] = `
Array [
  Object {
    "done": true,
    "value": Object {
      "fallback": true,
    },
  },
]
`;

exports[`mapToData with plain/text content-type should return result -ko- 1`] = `
Array [
  Object {
    "done": false,
    "value": Object {
      "data": "TEXT",
    },
  },
  Object {
    "done": true,
    "value": Object {
      "data": "TEXT",
    },
  },
]
`;

exports[`mapToData with plain/text content-type should return result -ok- 1`] = `
Array [
  Object {
    "done": false,
    "value": Object {
      "data": "TEXT",
    },
  },
  Object {
    "done": true,
    "value": Object {
      "data": "TEXT",
    },
  },
]
`;

exports[`mapToData with plain/text content-type should throw error when text parse on error 1`] = `"PARSING ERROR"`;
